@@ -1,3 +1,5 @@
+30Mar01=======================================================================
+1. fix errors on accept in EXtMsg
 29Mar01=======================================================================
 1. add better tracking of AGW circuits (possibly)
 2. add set and unset/agwmonitor (ing) [for all the notice it seems to take]
